--- a/report.ipynb
+++ b/report.ipynb
@@ -789,7 +789,6 @@
     }
    ],
    "source": [
-    "#\n",
     "shap.plots.waterfall(shap_values[1], max_display=12)"
    ]
   },
@@ -805,7 +804,9 @@
     "\n",
     "- Color is used to display the original value of a feature. \n",
     "\n",
-    "- In the plot below we can see that degree_spondyloisthesis is the most important feature on average."
+    "- In the plot below we can see that degree_spondyloisthesis is the most important feature on average.\n",
+    "\n",
+    "This graph is interesting as it show relationship between shap values and feature values. This means from this graph, in specific,  that higher values are lower values are clusterted in the classifications. Low values of degree_spondyloisthesis is connected to normal class and higher degree_spondyloisthesis is in abonraml class."
    ]
   },
   {
@@ -1879,6 +1880,17 @@
    ],
    "source": [
     "conf_plot(y_hat, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.Conclusions\n",
+    "\n",
+    "- We notice the decision tree achieved relatively lower accuracies compared to the rest of the model. However, This changes when we use random forest because it combined several decision trees that reduce the variance in performances. Random Forest achieved the highest evaluation matrics, followed by multilayer perceptron. Multilayer Percentron does not achived superior accuracies here as it tends to overfit the data. Given that the dataset is relatively small, using neural networks leads to overfit. \n",
+    "\n",
+    "- We noticed using Shapley values that degree_spondyloisthesis, sacral_slope, cervical_tilt are the most significant variables for making predictions. Having higher degree_spondyloisthesis and lower sacral_slope means 'abnormal' prediction."
    ]
   }
  ],
